fix: resolve dialog handling and small bug fix

--- a/webapp/front/front/src/app/components/auth-dialogs/signup-dialog/signup-dialog.component.html
+++ b/webapp/front/front/src/app/components/auth-dialogs/signup-dialog/signup-dialog.component.html
@@ -1,332 +1,98 @@
-<div class="dialog" id="signupDialog" style="display: flex" [ngClass]="{'show-dialog': showSignupDialog}">
-  <div class="dialog-content ">
+<div class="dialog" id="signupDialog" [ngClass]="{ 'show-dialog': showSignupDialog }">
+  <div class="dialog-content">
+    <!-- Close Button -->
     <div class="close-button" (click)="closeSignupDialog()">
       <i class="fas fa-close"></i>
     </div>
-    <!--TODO i18n-->
-    <div class="title mb-2 mt-5 f-c-c-c" style="gap:5px" i18n>
-      {{
-      selectedOption === 'neighbor'
-      ? 'Welcome to neibo'
-      : 'Boost your Business with neibo'
-      }}
-      <span class=" font-weight-normal">Sign up to get started</span>
+
+    <!-- Title -->
+    <div class="dialog-text">
+      <h3>{{ selectedOption === 'neighbor' ? 'Welcome to neibo' : 'Boost your Business with neibo' }}</h3>
+      <p>Sign up to get started</p>
     </div>
 
+    <!-- Toggle Options -->
     <div class="f-r-c-c g-0 w-100">
-      <div class="cool-button active" [class.active]="selectedOption === 'neighbor'" (click)="selectOption('neighbor')"
-        style="border-bottom-right-radius: 0; border-top-right-radius: 0;">
+      <button class="cool-button" [class.active]="selectedOption === 'neighbor'" (click)="selectOption('neighbor')">
         Neighbor
-      </div>
-      <div class="cool-button " [class.active]="selectedOption === 'service'" (click)="selectOption('service')"
-        style="border-bottom-left-radius: 0; border-top-left-radius: 0;">
+      </button>
+      <button class="cool-button" [class.active]="selectedOption === 'service'" (click)="selectOption('service')">
         Service
-      </div>
+      </button>
     </div>
 
-
-    <!--NEIGHBOR SIGNUP FORM-->
+    <!-- Neighbor Signup Form -->
     <div *ngIf="selectedOption === 'neighbor'">
-      <form [formGroup]="signupForm" (ngSubmit)="trySignup()" id="signupForm">
-
-        <div class="f-c-c-c ps-3 pe-3">
-          <div class="form-input align-items-start " style="gap:5px; width: 200px">
-            <span class="font-weight-normal c-light-text mls-2">Neighborhood</span>
-            <select class="cool-select">
-              <!-- <select formControlName="neighborhoodUrn" class="cool-select">
-              <option *ngFor="let neib of neighborhoodsList" [value]="neib._links.self">
-                {{ neib.name }}
-              </option>
-            </select> -->
-            </select>
-            <small class="form-error"> *Entered email is not valid</small> <!--TODO-->
-          </div>
-          <div class="row w-100">
-            <div class="col-6 pe-2">
-              <div class="form-input">
-                <label>
-                  <input placeholder="First name" i18n-placeholder class="input" formControlName="name" />
-                </label>
-                <!--TODO              <form:errors path="name" cssClass="landing-error" element="p"/>-->
-              </div>
-            </div>
-
-            <div class="col-6 ps-2">
-              <div class="form-input ">
-                <label>
-                  <input placeholder="Surname" i18n-placeholder class="input" formControlName="surname" />
-                </label>
-                <!-- TODO
-              <form:errors path="surname" cssClass="landing-error" element="p"/>
--->
-              </div>
-            </div>
-          </div>
-          <div class="row w-100">
-            <div class="col-6 pe-2">
-
-              <div class="form-input">
-                <label>
-                  <input placeholder="Email" class="input" formControlName="mail" />
-                </label>
-                <!--<form:errors path="mail" cssClass="landing-error" element="p"/> TODO-->
-              </div>
-            </div>
-            <div class="col-6 ps-2">
-
-              <div class="form-input">
-                <label>
-                  <input type="password" autocomplete="true" placeholder="Password" class="input"
-                    formControlName="password" />
-                </label>
-                <!--TODO <form:errors path="password" cssClass="landing-error" element="p"/>-->
-              </div>
-            </div>
-          </div>
-          <div class="row w-100">
-            <div class="col-6 pe-2">
-              <div class="form-input ">
-                <label>
-                  <input type="number" pattern="[0-9]*" inputmode="numeric" min="1" max="99999999"
-                    placeholder="Identification" formControlName="identification" class="input" />
-                </label>
-                <!--TODO <form:errors path="identification" cssClass="landing-error" element="p"/>-->
-              </div>
-            </div>
-            <div class="col-6 ps-2">
-              <div class="form-input ">
-                <label>
-                  <select class="cool-select" formControlName="language">
-                    <option value="English">English</option>
-                    <option value="Spanish">Spanish</option>
-                  </select>
-                </label>
-                <!--TODO <form:errors path="language" cssClass="landing-error" element="p"/>-->
-              </div>
-            </div>
-          </div>
-
-
-
-          <button type="submit" [disabled]="signupForm.invalid" class="action-button font-weight-bolder mt-3">
-            Sign up
-          </button>
-
+      <form [formGroup]="signupForm" (ngSubmit)="trySignup()" class="signup-form">
+        <!-- Neighborhood Selection -->
+        <div class="form-group">
+          <label for="neighborhood">Neighborhood</label>
+          <select id="neighborhood" formControlName="neighborhoodId" class="cool-select">
+            <option *ngFor="let neighborhood of neighborhoodsList" [value]="neighborhood.self">
+              {{ neighborhood.name }}
+            </option>
+          </select>
+          <small class="form-error"
+            *ngIf="signupForm.get('neighborhoodId').invalid && signupForm.get('neighborhoodId').touched">
+            *Neighborhood is required
+          </small>
         </div>
 
+        <!-- Name and Surname -->
+        <div class="row">
+          <div class="col">
+            <label>
+              <input placeholder="First name" class="input" formControlName="name" />
+            </label>
+          </div>
+          <div class="col">
+            <label>
+              <input placeholder="Surname" class="input" formControlName="surname" />
+            </label>
+          </div>
+        </div>
+
+        <!-- Email and Password -->
+        <div class="row">
+          <div class="col">
+            <label>
+              <input placeholder="Email" type="email" class="input" formControlName="mail" />
+            </label>
+          </div>
+          <div class="col">
+            <label>
+              <input placeholder="Password" type="password" class="input" formControlName="password" />
+            </label>
+          </div>
+        </div>
+
+        <!-- Identification and Language -->
+        <div class="row">
+          <div class="col">
+            <label>
+              <input placeholder="Identification" type="number" class="input" formControlName="identification" />
+            </label>
+          </div>
+          <div class="col">
+            <label>
+              <select class="cool-select" formControlName="language">
+                <option value="English">English</option>
+                <option value="Spanish">Spanish</option>
+              </select>
+            </label>
+          </div>
+        </div>
+
+        <!-- Submit Button -->
+        <button type="submit" class="action-button" [disabled]="signupForm.invalid">
+          Sign up
+        </button>
       </form>
     </div>
 
-    <div *ngIf="selectedOption === 'service'">
-      <!--
-    <form:form method="post" action="${pageContext.request.contextPath}/signup-worker" modelAttribute="workerSignupForm" id="workerSignupForm">
-      <form:errors cssClass="error" element="p"/>
-      <div class="f-c-c-c ps-3 pe-3">
-        <div class="form-input " style="max-width: 320px">
-          <form:label path="businessName">
-            <c:set var="businessName"><spring:message code="Business.name"/></c:set>
-            <form:input path="businessName" placeholder="${businessName}" class="input"/>
-          </form:label>
-          <form:errors path="businessName" cssClass="landing-error" element="p"/>
-        </div>
-        <div class="form-input  profession-select">
-          <form:hidden path="professionIds" id="selectedProfessions"/>
-
-          <div class="container">
-            <div class="select-btn">
-              <span class="btn-text"><spring:message code="Select.profession"/></span>
-              <span class="arrow-dwn">
-                                        <i class="fa-solid fa-chevron-down"></i>
-                                    </span>
-            </div>
-            <ul class="list-items">
-              <c:forEach var="profession" items="${professionsPairs}">
-                <li class="item" data-profession-id="${profession.key}">
-                                            <span class="checkbox ">
-                                                <i class="fa-solid fa-check check-icon"></i>
-                                            </span>
-                  <span class="item-text"><spring:message code="${profession.value}"/></span>
-                </li>
-              </c:forEach>
-            </ul>
-          </div>
-          <script>
-            const btnText = document.querySelector(".btn-text");
-            const arrow = document.querySelector(".arrow-dwn");
-            const arrowIcon = document.querySelector(".arrow-dwn i");
-
-            const selectBtn = document.querySelector(".select-btn"),
-              items = document.querySelectorAll(".item"),
-              selectedProfessions = document.getElementById("selectedProfessions");
-            const listContainer = document.querySelector(".list-items");
-
-            items.forEach(item => {
-              item.addEventListener("click", () => {
-                item.classList.toggle("checked");
-                updateSelectedProfessions();
-              });
-            });
-
-            function updateSelectedProfessions() {
-              const checkedItems = document.querySelectorAll(".item.checked");
-              const selectedProfessionIds = Array.from(checkedItems).map(item => item.getAttribute("data-profession-id"));
-              const selectedProfessionTexts = Array.from(checkedItems).map(item => item.querySelector(".item-text").innerText);
-              selectedProfessions.value = selectedProfessionIds.join(",");
-              const btnText = document.querySelector(".btn-text");
-              if (selectedProfessionIds.length > 0) {
-                if (selectedProfessionTexts.length > 1) {
-                  btnText.innerText = "(" + selectedProfessionIds.length + ") " + selectedProfessionTexts.join(", ");
-                } else {
-                  btnText.innerText = selectedProfessionTexts.join(", ");
-                }
-                btnText.classList.add("c-text");
-
-              } else {
-                btnText.classList.remove("c-text");
-                btnText.innerText = `<spring:message code="Select.profession"/>`;
-              }
-            }
-
-            selectBtn.addEventListener("click", () => {
-              selectBtn.classList.toggle("open");
-            });
-
-            // Close the list when clicking outside
-            document.addEventListener("click", (event) => {
-              if (!listContainer.contains(event.target) && event.target !== selectBtn && event.target !== btnText && event.target !== arrow && event.target !== arrowIcon) {
-                selectBtn.classList.remove("open");
-              }
-            });
-
-            selectBtn.addEventListener("focus", () => {
-              selectBtn.classList.add("open");
-            });
-
-
-            // Initial update of selected professions on page load
-            updateSelectedProfessions();
-          </script>
-          <form:errors path="professionIds" cssClass="landing-error" element="p"/>
-        </div>
-
-        <div class="row w-100">
-          <div class="col-6 pe-2">
-            <div class="form-input">
-              <form:label path="w_name">
-                <c:set var="w_firstName"><spring:message code="First.name"/></c:set>
-                <form:input path="w_name" placeholder="${w_firstName}" class="input"/>
-              </form:label>
-              <form:errors path="w_name" cssClass="landing-error" element="p"/>
-            </div>
-          </div>
-
-          <div class="col-6 ps-2">
-            <div class="form-input ">
-              <form:label path="w_surname">
-                <c:set var="w_surname"><spring:message code="Surname"/></c:set>
-                <form:input path="w_surname" placeholder="${w_surname}" class="input"/>
-              </form:label>
-              <form:errors path="w_surname" cssClass="landing-error" element="p"/>
-            </div>
-          </div>
-        </div>
-        <div class="row w-100">
-          <div class="col-6 pe-2">
-            <div class="form-input">
-              <form:label path="w_mail">
-                <c:set var="w_email"><spring:message code="Email"/></c:set>
-                <form:input path="w_mail" placeholder="${w_email}" class="input"/>
-              </form:label>
-              <form:errors path="w_mail" cssClass="landing-error" element="p"/>
-            </div>
-          </div>
-
-          <div class="col-6 ps-2">
-            <div class="form-input">
-              <form:label path="w_password">
-                <c:set var="w_password"><spring:message code="Password"/></c:set>
-                <form:input type="password" path="w_password" autocomplete="true" placeholder="Password"
-                            class="input"/>
-              </form:label>
-              <form:errors path="w_password" cssClass="landing-error" element="p"/>
-            </div>
-          </div>
-        </div>
-        <div class="row w-100">
-          <div class="col-6 pe-2">
-            <div class="form-input">
-              <form:label path="address">
-                <c:set var="address"><spring:message code="Address"/></c:set>
-                <form:input path="address" placeholder="${address}" class="input"/>
-              </form:label>
-              <form:errors path="address" cssClass="landing-error" element="p"/>
-            </div>
-          </div>
-
-          <div class="col-6 ps-2">
-            <div class="form-input">
-              <form:label path="w_identification">
-                <c:set var="w_identification"><spring:message code="Identification"/></c:set>
-
-                <form:input
-                  type="number"
-                  pattern="[0-9]*"
-                  inputmode="numeric"
-                  min="1" max="99999999"
-                  path="w_identification"
-                  placeholder="${w_identification}"
-                  class="input"
-                />
-              </form:label>
-              <form:errors path="w_identification" cssClass="landing-error" element="p"/>
-            </div>
-          </div>
-        </div>
-        <div class="row w-100">
-          <div class="col-6 pe-2">
-            <div class="form-input">
-              <form:label path="w_language">
-                <form:select path="w_language" class="cool-select">
-                  <form:option value="English"><spring:message code="English"/></form:option>
-                  <form:option value="Spanish"><spring:message code="Spanish"/></form:option>
-                </form:select>
-              </form:label>
-              <form:errors path="w_language" cssClass="landing-error" element="p"/>
-            </div>
-          </div>
-
-          <div class="col-6 ps-2">
-
-            <div class="form-input">
-              <form:label path="phoneNumber">
-                <c:set  var="phoneNumberPlaceholder">
-                  <spring:message code="PhoneNumber"/>  (<spring:message code="eg"/> +54 9 11 1234 5678)
-                </c:set>
-                <form:input path="phoneNumber" placeholder="${phoneNumberPlaceholder}" class="input"/>
-              </form:label>
-              <form:errors path="phoneNumber" cssClass="landing-error" element="p"/>
-            </div>
-          </div>
-        </div>
-
-
-        <script>
-          function submitWorkerSignupForm() {
-            const form = document.forms["workerSignupForm"];
-            form.submit();
-          }
-        </script>
-        <button onclick="submitWorkerSignupForm()" class="action-button font-weight-bolder mb-5"><spring:message
-          code="Signup"/></button>
-
-      </div>
-
-    </form:form>-->
-      <p>Service Form</p>
-    </div>
-
-
-
-
+    <!-- Service Signup Placeholder -->
+    <!-- <div *ngIf="selectedOption === 'service">
+      <p>Service Form (To be implemented)</p>
+    </div> -->
   </div>
 </div>
