--- a/webapp/front/front/src/app/components/post-card/post-card.component.html
+++ b/webapp/front/front/src/app/components/post-card/post-card.component.html
@@ -86,7 +86,7 @@
                             class="small-profile-picture" alt="profile_picture_img" />
                         <div class="bold">{{ comment.user.name }} {{ comment.user.surname }}</div>
                     </div>
-                    <div class="bold">{{ comment.humanReadableDate }}</div>
+                    <div class="">{{ comment.humanReadableDate }}</div>
                 </div>
                 <div class="comment-body w-100">
                     <p class="mt-2 w-100 c-light-text normal">{{ comment.message}}</p>
