--- a/webapp/front/front/src/app/modules/marketplace/listing-requests/listing-requests.component.html
+++ b/webapp/front/front/src/app/modules/marketplace/listing-requests/listing-requests.component.html
@@ -151,86 +151,84 @@
 
         <div class="dialog-content marketplace">
             <div class="dialog-header">
-                <div class="dialog-svg">
-                    <svg width="242" height="219" viewBox="0 0 242 219" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g filter="url(#filter0_d_17_17)">
-                            <path
-                                d="M26.8122 56.1162C28.0135 49.5985 34.2709 45.2888 40.7885 46.49L50.0518 48.1973L57.7951 49.6245L207.734 77.2595L214.773 78.5569L225.199 80.4785C231.716 81.6797 236.026 87.9371 234.825 94.4548L215.187 201C213.986 207.518 207.729 211.828 201.211 210.626L16.8011 176.638C10.2834 175.437 5.97367 169.179 7.17493 162.662L26.8122 56.1162Z"
-                                fill="#7D7AE3"></path>
-                            <path
-                                d="M137.333 24.1789L43.5706 58.7884C43.226 58.9156 42.8521 58.9415 42.4931 58.8632C40.6084 58.4516 40.4326 55.8323 42.2454 55.1726L137.39 20.5474C140.028 19.5873 142.977 20.0805 145.159 21.847L213.114 76.8545C214.411 77.9039 213.669 80 212.001 80C211.59 80 211.192 79.8573 210.876 79.5964L145.188 25.5082C142.992 23.7 140.001 23.1939 137.333 24.1789Z"
-                                fill="#7D7AE3"></path>
-                            <circle cx="142.151" cy="13.1512" r="7" stroke="#7D7AE3" stroke-width="4.30235"></circle>
-                        </g>
-                        <defs>
-                            <filter id="filter0_d_17_17" x="0.973633" y="0" width="240.052" height="218.827"
-                                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
-                                <feColorMatrix in="SourceAlpha" type="matrix"
-                                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha">
-                                </feColorMatrix>
-                                <feOffset dy="2"></feOffset>
-                                <feGaussianBlur stdDeviation="3"></feGaussianBlur>
-                                <feComposite in2="hardAlpha" operator="out"></feComposite>
-                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0">
-                                </feColorMatrix>
-                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_17_17">
-                                </feBlend>
-                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_17_17" result="shape">
-                                </feBlend>
-                            </filter>
-                        </defs>
-                    </svg>
-                </div>
-                <div class="boxy-poxy p-2" id="boxy-poxy">
-                    <div style="position: relative; color:var(--always-background)" class="f-c-s-s g-0 p-1">
-                        <h3 class="font-size-18 font-weight-bold mb-1">Pending Request</h3>
-                        <p style="text-align: justify; color:var(--always-background);"
-                            class="font-weight-normal font-size-14">
-                            You have a pending request for <span class="font-weight-bold">
-                                {{ selectedUnitsRequested }}
-                            </span> units from <span class="font-weight-bold">
-                                {{ selectedRequesterName }}
-                            </span>. Please choose to either confirm the sale or decline the request.
+                <div class="dialog-svg-wrapper pending">
+
+                    <div class="dialog-svg">
+                        <svg width="242" height="219" viewBox="0 0 242 219" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <g filter="url(#filter0_d_17_17)">
+                                <path
+                                    d="M26.8122 56.1162C28.0135 49.5985 34.2709 45.2888 40.7885 46.49L50.0518 48.1973L57.7951 49.6245L207.734 77.2595L214.773 78.5569L225.199 80.4785C231.716 81.6797 236.026 87.9371 234.825 94.4548L215.187 201C213.986 207.518 207.729 211.828 201.211 210.626L16.8011 176.638C10.2834 175.437 5.97367 169.179 7.17493 162.662L26.8122 56.1162Z"
+                                    fill="#7D7AE3"></path>
+                                <path
+                                    d="M137.333 24.1789L43.5706 58.7884C43.226 58.9156 42.8521 58.9415 42.4931 58.8632C40.6084 58.4516 40.4326 55.8323 42.2454 55.1726L137.39 20.5474C140.028 19.5873 142.977 20.0805 145.159 21.847L213.114 76.8545C214.411 77.9039 213.669 80 212.001 80C211.59 80 211.192 79.8573 210.876 79.5964L145.188 25.5082C142.992 23.7 140.001 23.1939 137.333 24.1789Z"
+                                    fill="#7D7AE3"></path>
+                                <circle cx="142.151" cy="13.1512" r="7" stroke="#7D7AE3" stroke-width="4.30235">
+                                </circle>
+                            </g>
+                            <defs>
+                                <filter id="filter0_d_17_17" x="0.973633" y="0" width="240.052" height="218.827"
+                                    filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                    <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
+                                    <feColorMatrix in="SourceAlpha" type="matrix"
+                                        values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha">
+                                    </feColorMatrix>
+                                    <feOffset dy="2"></feOffset>
+                                    <feGaussianBlur stdDeviation="3"></feGaussianBlur>
+                                    <feComposite in2="hardAlpha" operator="out"></feComposite>
+                                    <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0">
+                                    </feColorMatrix>
+                                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_17_17">
+                                    </feBlend>
+                                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_17_17"
+                                        result="shape">
+                                    </feBlend>
+                                </filter>
+                            </defs>
+                        </svg>
+                    </div>
+                    <!-- Overlay Text -->
+                    <div class="inclined-dialog-text">
+                        <h3 class="font-size-18 font-weight-bold">Pending Request</h3>
+                        <p class="font-weight-normal font-size-14">
+                            You have a pending request for
+                            <span class="font-weight-bold">{{ selectedUnitsRequested }}</span> units from
+                            <span class="font-weight-bold">{{ selectedRequesterName }}</span>.
+                            Please choose to either confirm the sale or decline the request.
                         </p>
                     </div>
                 </div>
-                <a class="close-button marketplace" (click)="closeReplyDialog()">
-                    <i class="fas fa-close"></i>
-                </a>
-                <!-- Warning text if stock < requested -->
-
-
-                <!-- Action Buttons -->
-                <div class="f-c-c-c w-100 g-1 mt-3">
-                    <button (click)="submitMarkAsSold()"
-                        class="cool-button marketplace-button font-size-14 font-weight-bold"
-                        [disabled]="product?.stock < selectedUnitsRequested">
-                        Confirm Sale
-                    </button>
-
-                    <button type="button" class="cool-button red font-size-14 font-weight-bold"
-                        (click)="submitDeclineRequest()">
-                        Decline
-                    </button>
-                </div>
-                <div *ngIf="product?.stock < selectedUnitsRequested" class="c-red mt-2 font-size-14 font-weight-normal">
-                    The requested quantity is greater than the current stock.
-                </div>
+            </div>
+            <!-- Close Button -->
+            <a class="close-button marketplace" (click)="closeRequestDialog()">
+                <i class="fas fa-close"></i>
+            </a>
+            <!-- Action Buttons -->
+            <div class="f-c-c-c w-100 g-1 mt-3">
+                <button (click)="submitMarkAsSold()" class="cool-button marketplace-button"
+                    [disabled]="product?.stock < selectedUnitsRequested">
+                    Confirm Sale
+                </button>
+                <button (click)="submitDeclineRequest()" class="cool-button red">Decline</button>
+            </div>
+            <!-- Warning Text -->
+            <div *ngIf="product?.stock < selectedUnitsRequested" class="c-red mt-2 font-size-14">
+                The requested quantity is greater than the current stock.
             </div>
         </div>
-
-
-        <!-- Loader container -->
-        <div id="loader-container" class="loader-container" [ngStyle]="{ 'display': showLoader ? 'flex' : 'none' }">
-            <div class="cool-static-container small-size-container">
-                <div style="font-weight: bold; font-size: 16px">
-                    Processing the request...
-                </div>
-                <div class="loader marketplace" style="margin-top: 20px"></div>
-            </div>
-        </div>
-
-        <app-wave-footer [isMarketplace]="true"></app-wave-footer>
-
     </div>
+
+
+
+    <!-- Loader container -->
+    <div id="loader-container" class="loader-container" [ngStyle]="{ 'display': showLoader ? 'flex' : 'none' }">
+        <div class="cool-static-container small-size-container">
+            <div style="font-weight: bold; font-size: 16px">
+                Processing the request...
+            </div>
+            <div class="loader marketplace" style="margin-top: 20px"></div>
+        </div>
+    </div>
+    <app-wave-footer [isMarketplace]="true"></app-wave-footer>
+
+</div>
