--- a/webapp/front/front/src/app/components/auth-dialogs/login-dialog/login-dialog.component.html
+++ b/webapp/front/front/src/app/components/auth-dialogs/login-dialog/login-dialog.component.html
@@ -1,55 +1,55 @@
-<div class="dialog" id="loginDialog" style="display: flex" [ngClass]="{'show-dialog': showLoginDialog}">
-  <div *ngIf="loading; else notLoading">
-    <div class="dialog-content f-c-c-c">
-      <div style="font-weight: bold; font-size: 16px">Logging you in. Please wait...</div>
-      <div class="loader" style="margin-top: 20px"></div>
+<div class="dialog" id="loginDialog" [ngClass]="{ 'show-dialog': showLoginDialog }">
+  <div class="dialog-content">
+    <!-- Close Button -->
+    <div class="close-button" (click)="closeLoginDialog()">
+      <i class="fas fa-close"></i>
     </div>
-  </div>
-  <ng-template #notLoading>
-    <div class="dialog-content">
-      <div class="close-button" (click)="closeLoginDialog()">
-        <i class="fas fa-close"></i>
-      </div>
-      <div class="title mb-2 mt-5 f-c-c-c" style="gap:5px">
-        Welcome to neibo
-        <span class=" font-weight-normal">Log in to continue </span>
-      </div>
 
-      <form (ngSubmit)="tryLogin()" [formGroup]="loginForm" class="login-form" id="loginForm">
+    <!-- Loading State -->
+    <div *ngIf="loading; else loginFormTemplate">
+      <div class="f-c-c-c">
+        <div style="font-size: 16px">Logging you in. Please wait...</div>
+        <div class="w-100 loader" style="margin-top: 20px"></div>
+      </div>
+    </div>
+
+    <!-- Login Form -->
+    <ng-template #loginFormTemplate>
+      <div class=" ">
+        <div class="title">Welcome to Neibo</div>
+        <p>Log in to continue.</p>
+      </div>
+      <form (ngSubmit)="tryLogin()" [formGroup]="loginForm" class="login-form">
         <div class="centered-column">
+          <!-- Email Field -->
           <label>
-            <input id="login-email" type="email" placeholder="Email" i18n-placeholder class="input"
-              formControlName="email">
-            <small class="form-error" *ngIf="loginForm.get('email').invalid && loginForm.get('email').touched ">
+            <input id="login-email" type="email" placeholder="Email" class="input" formControlName="email">
+            <small class="form-error" *ngIf="loginForm.get('email').invalid && loginForm.get('email').touched">
               *Entered email is not valid
             </small>
           </label>
+          <!-- Password Field -->
           <label>
-            <input id="login-password" type="password" placeholder="Password" i18n-placeholder autocomplete="true"
-              class="input" formControlName="password">
-            <small class="form-error" *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched ">
+            <input id="login-password" type="password" placeholder="Password" class="input" formControlName="password">
+            <small class="form-error" *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched">
               *Password is required
             </small>
           </label>
         </div>
-        <label class="centered-row light-text">
-          <input type="checkbox" formControlName="rememberMe">
-          Remember me
+        <!-- Remember Me -->
+        <label class="centered-row">
+          <input type="checkbox" formControlName="rememberMe"> Remember me
         </label>
-
+        <!-- Errors and Submit Button -->
         <div class="centered-column">
-          <small class="form-error centered" *ngIf="loginFailed">
-            *Invalid email or password
-          </small>
-          <button type="submit" class="action-button font-weight-bolder" [disabled]="loginForm.invalid">
-            <span>Login</span>
-          </button>
-          <span style="color:var(--lighttext); font-size: 14px;">Not a member yet?
+          <small class="form-error centered" *ngIf="loginFailed">*Invalid email or password</small>
+          <button type="submit" class="action-button font-weight-bolder" [disabled]="loginForm.invalid">Login</button>
+          <span class="light-text">
+            Not a member yet?
             <a (click)="openSignupDialog()" class="a-link">Sign up now</a>
           </span>
         </div>
       </form>
-
-    </div>
-  </ng-template>
+    </ng-template>
+  </div>
 </div>
